trunk/Archive2/81/2fe842373948c0/output
main.cpp: In function 'int main()':
main.cpp:31:5: error: expected ';' before 'int'
     int (*fn)(int, int) = add;
     ^
main.cpp:33:71: error: 'fn' was not declared in this scope
     printf("%i and %i = %i", R.x.num1, R.x.num2, fn(R.x.num1, R.x.num2));
                                                                       ^
